# AgentFramework-Python-middleware-PIIMiddleware

./: .gitignore  AgentFramework.slnx  README.md  example.py  pyproject.toml
.github/workflows/: python-publish.yml
AgentFramework/Python/: README.md
AgentFramework/Python/Middleware/: README.md
AgentFramework/Python/Middleware/AgentTokenGuard/: README.md  example.py  example2.py  pyproject.toml
AgentFramework/Python/Middleware/AgentTokenGuard/tests/: conftest.py  test_token_guard.py
AgentFramework/Python/Middleware/AgentTokenGuard/token_guard_middleware/: __init__.py  middleware.py  token_tracker.py
AgentFramework/Python/Middleware/AzureLanguage/: README.md  agent_azure_translate.py  conftest.py
AgentFramework/Python/Middleware/AzureLanguage/language_middleware/: LICENSE  pyproject.toml
AgentFramework/Python/Middleware/AzureLanguage/language_middleware/language_middleware/: __init__.py  azure_translation.py  builder.py  config.py  llm_translation.py  middleware.py  preprocessing.py  translation_service.py
AgentFramework/Python/Middleware/AzureLanguage/tests/: conftest.py  test_language_middleware.py
AgentFramework/Python/Middleware/ContextCompression/: LICENSE  README.md  pyproject.toml
AgentFramework/Python/Middleware/ContextCompression/context_compression/: __init__.py  context_compression_middleware.py
AgentFramework/Python/Middleware/pii_middleware/: README.md  example.py
AgentFramework/Python/Middleware/pii_middleware/pii_middleware/: agent_pii_middleware.py  security_profiles.py
AgentFramework/Python/Module/FileModule/: README.md  file_search_tools.py  pyproject.toml  search_config.py  search_helpers.py
AgentFramework/Python/Module/FileModule/file_search_module/: __init__.py  file_search_tools.py  search_config.py  search_helpers.py
AgentFramework/Python/Module/YouTubeModule/: LICENSE  README.md  pyproject.toml  youtube_response.py  youtube_search.py  youtube_tools.py
AgentFramework/Python/Module/YouTubeModule/youtube_search_module/: __init__.py  youtube_config.py  youtube_search.py  youtube_tools.py
AgentFramework/Python/Sample/: agent_azure_translate.py  agent_context_compression.py  agent_token1.py  agent_youtube_search.py  file_search.py  pii_middleware.py
AgentFramework/dotnet/: AzureAICommunityAgent.sln  README.md
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/: Directory.Build.props  README.md
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/AzureMapsAddressSuggestionMiddleware/: Address.cs  AddressFieldOptions.cs  AzureMapsAddressSuggestionMiddleware.csproj  FuzzySearchClient.cs  IPoiSearchClient.cs  MapsSearchConfig.cs  MapsSearchHandler.cs  MapsSearchToolFactory.cs  MapsSearchToolNames.cs  MapsSearchTools.cs  README.md
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/ContextCompressionMiddleware/: CompressionInfo.cs  ContextCompressionMiddleware.cs  ContextCompressionMiddleware.csproj  ContextCompressionThresholdException.cs  README.md
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/FileSearchMiddleware/: FileSearchHandler.cs  FileSearchMiddleware.csproj  FileSearchToolFactory.cs  FileSearchToolNames.cs  FileSearchTools.cs  README.md  SearchConfig.cs
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/LanguageTranslationMiddleware/: AzureTranslationService.cs  AzureTranslatorConfig.cs  ITranslationService.cs  LLMTranslationService.cs  LanguageTranslationMiddleware.cs  LanguageTranslationMiddleware.csproj  LanguageTranslationMiddlewareBuilder.cs  README.md
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/PIIChatDetectionMiddleware/: PIIChatDetectionMiddleware.cs  PIIChatDetectionMiddleware.csproj  PIIChatDetectionMiddleware.csproj.Backup.tmp  PIIPolicy.cs  README.md  SequenceExtensions.cs
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/TokenUsageMiddleware/: IQuotaStore.cs  InMemoryQuotaStore.cs  PeriodKeys.cs  QuotaExceededException.cs  QuotaExceededInfo.cs  README.md  TokenUsageMiddleware.cs  TokenUsageMiddleware.csproj  TokenUsageRecord.cs
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/ToolLimitMiddleware/: IToolLimitTracker.cs  MiddlewareExtenstions.cs  README.md  ToolLimitMiddleware.cs  ToolLimitMiddleware.csproj  ToolLimits.cs  ToolUsageState.cs
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/YouTubeVideoMiddleware/: README.md  YouTubeConfig.cs  YouTubeFetch.cs  YouTubeMiddleware.csproj  YouTubeResponse.cs  YouTubeSearch.cs  YouTubeToolFactory.cs  YouTubeToolNames.cs  YouTubeTools.cs
AgentFramework/dotnet/AzureAICommunityAgent/Middleware/YouTubeVideoMiddleware/Search/: IYouTubeSearch.cs  YouTubeSearch.cs
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/AzureMapsSearch/: AzureMapsSearch.csproj  ConsoleUI.cs  Program.cs
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/ContextCompression/: ConsoleUI.cs  ContextCompression.csproj  Program.cs
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/FileSearchAgentDemo/: ConsoleUI.cs  FileSearchAgentDemo.csproj  Program.cs
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/LanguageTranslation/: LanguageTranslation.csproj  Program.cs
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/PIIChatDetection/: PIIChatDetection.csproj  Program.cs
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/TokenUsage/: ConsoleUI.cs  JsonFileQuotaStore.cs  Program.cs  TokenUsage.csproj
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/ToolLimit/: Program.cs  ToolLimit.csproj
AgentFramework/dotnet/AzureAICommunityAgent/Sample/Middleware/YouTubeSearch/: Program.cs  YouTubeSearch.csproj
AgentFramework/dotnet/AzureAICommunityAgent/Tests/Middleware/PIIChatDetectionMiddleware.Tests/: PIIChatDetectionMiddleware.Tests.csproj  PIIChatDetectionMiddlewareTests.cs
AgentFramework/dotnet/AzureAICommunityAgent/Tests/Middleware/TokenUsageMiddleware.Tests/: TokenUsageMiddleware.Tests.csproj  TokenUsageMiddlewareTests.cs
agent_pii_security/: __init__.py
pii_middleware/: pii_middleware.py
