[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azureaicommunity-agent-file-search"
version = "1.0.1"
description = "File search tools (by name and content) for AI agent pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vinoth Rajendran", email = "r.vinoth@live.com" }]
keywords = ["ai", "file-search", "tools", "agent", "middleware", "llm", "azure", "azure-ai", "community"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agent-framework",
]

[project.urls]
Homepage = "https://github.com/rvinothrajendran/AgentFramework"
Repository = "https://github.com/rvinothrajendran/AgentFramework"
Issues = "https://github.com/rvinothrajendran/AgentFramework"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_search_module*"]
